chore: force clear streamlit cache

--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ httpx>=0.24.0
 # --- Model Hub ---
 huggingface-hub>=0.19.0
 
+
 # ============================================================================
 # HIZLI KURULUM
 # ============================================================================
@@ -61,3 +62,5 @@ huggingface-hub>=0.19.0
 #    streamlit run app.py
 #
 # ============================================================================
+
+# cache_buster=1
